# toggl-entry-annotator

./: .env.cloudflare.example  .gitignore  LICENSE  README.md  full-sync.ipynb  main.py  pyproject.toml  view_sql_table.ipynb
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  backup.sh  cache.py  conftest.py  crontab  db.py  entrypoint.sh  fly.toml  full-sync.ipynb  main.py  middleware.py  pyproject.toml  schema.py  test_cache.py  test_main.py  test_system_persistence.py  test_toggl.py  toggl.py  view_sql_table.ipynb
backend/scripts/: full-sync.py  view_sql_table.py
frontend/: .env.example  .gitignore  index.html  netlify.toml  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  DailyNoteEditor.test.tsx  DailyNoteEditor.tsx  ProjectFilter.test.tsx  ProjectFilter.tsx  api.test.tsx  api.ts  index.css  main.tsx  setupTests.ts
frontend/src/utils/: time.test.ts  time.ts
